# simple_project

./: README.md  pyproject.toml
chroma_db/: chroma.sqlite3
data/: records.json
src/: describe_image_openai.py  indexer.py  search.py  utils.py
