[project]
name = "simple-project"
version = "0.1.0"
description = "Index images of the instagram creators and make them searchable"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.1",
    "fastapi[standard]>=0.129.0",
    "keras>=3.13.2",
    "nltk>=3.9.2",
    "openai>=2.21.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
